<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeMenu">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="617dp"
        android:background="#5D0E85"
        android:gravity="center"
        android:text="@string/service_novigrad"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_faire"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="507dp"
        android:text="@string/que_voulez_vous_faire_aujourd_hui"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_Configurer"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="294dp"
        android:text="@string/configurer_la_sucursale" />

    <Button
        android:id="@+id/btn_Voir"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="146dp"
        android:text="@string/voir_les_demandes_de_services" />


</RelativeLayout>