<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuppService">


    <TextView
        android:background="#511171"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="609dp"
        android:text="@string/Service_Novigrad" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="473dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nom_service"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="313dp"
        android:text="@string/entrez_le_nom_du_service_supprimer"
        android:textSize="25sp" />

</RelativeLayout>